--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Functional programing",
   "main": "lib/index.js",
+  "repository" : {
+    "type": "git",
+    "url": "https://github.com/dmytro-lymarenko/functional-programming.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --out-dir lib",
