--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "functional-programming",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Functional programing",
   "main": "lib/index.js",
-  "repository" : {
+  "repository": {
     "type": "git",
     "url": "https://github.com/dmytro-lymarenko/functional-programming.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --env=node",
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build"
   },
@@ -17,6 +17,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
-  }
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^20.0.4"
+  },
+  "dependencies": {}
 }
